<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/complete_the_empty_form_below" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="#c1c2c4">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="#c1c2c4">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="#c1c2c4"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="#c1c2c4"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_re_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <!-- <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_organization"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:textColorHint="#c1c2c4">

                 <EditText
                     android:id="@+id/input_organization"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_organization"
                     android:singleLine="true"
                     android:textSize="16sp" />
             </android.support.design.widget.TextInputLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:textColorHint="#c1c2c4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="Department"
                    android:textSize="14sp" />

                <!--<Spinner
                    android:id="@+id/departmentSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown" />-->

                <com.example.nsas_app.activities.MultiSelectSpinner
                    android:id="@+id/departmentSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:textColorHint="#c1c2c4">

                <TextView
                    style="@style/TextView.InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization"
                    android:textSize="14sp" />

               <!-- <Spinner
                    android:id="@+id/organizationSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown" />-->
                <com.example.nsas_app.activities.MultiSelectSpinner
                    android:id="@+id/organizationSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:paddingTop="4dp"
                android:textColorHint="#c1c2c4">

                <TextView
                    style="@style/TextView.InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Role"
                    android:textSize="14sp" />

                <!--<Spinner
                    android:id="@+id/rolespinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:spinnerMode="dropdown" />-->
                <com.example.nsas_app.activities.MultiSelectSpinner
                    android:id="@+id/rolespinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <!-- <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_department"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:textColorHint="#c1c2c4"
                 android:theme="@style/TextLabel">

                 <EditText
                     android:id="@+id/input_department"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_department"
                     android:singleLine="true"
                     android:textColor="@color/colorAccent"
                     android:textSize="16sp" />
             </android.support.design.widget.TextInputLayout>-->


            <!-- <android.support.design.widget.TextInputLayout
               android:id="@+id/input_layout_place"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               android:textColorHint="#c1c2c4"
               android:theme="@style/TextLabel">

               <EditText
                   android:id="@+id/input_place"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_place"
                   android:singleLine="true"
                   android:textColor="@color/colorAccent"
                   android:textSize="16sp" />
           </android.support.design.widget.TextInputLayout>-->
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/login_btn_background_double"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_registered_login_here"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
        <!-- <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"/>-->
    </LinearLayout>

</RelativeLayout>